--- a/hw01-maven/pom.xml
+++ b/hw01-maven/pom.xml
@@ -15,6 +15,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+        </dependency>
     </dependencies>
 
     <packaging>jar</packaging>
